--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <head>
     <title>Crud Operation</title>
-    <link type="text/css" rel="stylesheet" href="style.css"
+    <link type="text/css" rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <h1>hello world</h1>
     <table>
         <tr>
             <td>
@@ -13,7 +14,7 @@
                         <label for="productCode">Product Code</label>
                         <input type="text" name="productCode" id="productCode">
                     </div>
-                    <h1>hello world</h1>
+                    
                     <div>
                         <label for="product">Product Name</label>
                         <input type="text" name="product" id="product">
